--- a/Throw_fornt/app/src/main/res/values/strings.xml
+++ b/Throw_fornt/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Throw_fornt</string>
     <string name="all_dialog_default_positive_button">데이터</string>
+
+    <!-- home -->
+    <string name="home_menu_map">지도</string>
+    <string name="home_menu_mypage">마이페이지</string>
 </resources>
