--- a/Throw_fornt/app/src/main/res/values/strings.xml
+++ b/Throw_fornt/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="map_location_permission_upgrade_require_message">정확한 위치를 활용하려면 위치 권한을 업데이트해주세요!</string>
     <string name="map_location_permission_require_message">원활한 동작을 위해 위치 권한을 켜주세요.</string>
     <string name="map_location_service_turn_on_require_message">GPS를 먼저 켜주세요.</string>
+
+    <!--map_store-->
+    <string name="map_store_navigator_text">길찾기</string>
+    <string name="map_store_call_text">전화</string>
 </resources>
