--- a/Throw_fornt/app/src/main/res/values/strings.xml
+++ b/Throw_fornt/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <!--map_store-->
     <string name="map_store_navigator_text">길찾기</string>
     <string name="map_store_call_text">전화</string>
+
+    <!--store_management-->
+    <string name="store_management_title_text">수정 및 삭제</string>
+    <string name="store_management_message_text">수정할지 삭제할지 선택해주세요.</string>
+    <string name="store_management_modify_text">수정</string>
+    <string name="store_management_delete_text">삭제</string>
 </resources>
